# GamesDiy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
HearthStone/: ext2.md  ext3.md  ext4.md  ext5.md  ext6.md  main.md
HearthStone/HS-DIY/: SomeCards.md  ext1.md  ext2.md  ext4.md  hdl.md  main.md  (+1 more)
OtherGames/: Evolution.md
SanGuoSha/: JKS.md  SGS-RebirthProject.md
SanGuoSha/sgssim/: main.py  pyproject.toml
SanGuoSha/sgssim/src/core/: card.py  deck.py  engine.py  extension.py  player.py
SanGuoSha/sgssim/src/extensions/: __init__.py
SanGuoSha/sgssim/src/extensions/standard/: deck.json
SanGuoSha/sgssim/src/sgssim/core/: card.py  deck.py  engine.py  extension.py  hero.py  player.py  roleplay.py  skill.py
SanGuoSha/sgssim/src/sgssim/core/agents/: __init__.py  agent.py  basic.py
SanGuoSha/sgssim/src/sgssim/core/engines/: __init__.py  phases.py  roleplay.py
SanGuoSha/sgssim/src/sgssim/core/engines/events/: __init__.py  base.py  phase_events.py
SanGuoSha/sgssim/src/sgssim/extensions/: __init__.py
SanGuoSha/sgssim/src/sgssim/extensions/debug/: __init__.py  card_list.json
SanGuoSha/sgssim/src/sgssim/extensions/standard/: __init__.py  card_list.json  cards.py
SanGuoSha/sgssim/src/sgssim/scripts/: main.py  run.py  simulate.py
SanGuoSha/sgssim/src/sgssim/support/: logging_utils.py
SanGuoSha/sgssim/src/sgssim/ui/: tui.py
SanGuoSha/sgssim/src/sgssim/ui/cli/: __init__.py  app.py
SanGuoSha/sgssim/src/support/: logging_utils.py
official/: 1v1.md  standard.md  wargame.md
scripts/: create_ext_pack.py
sgssim/: README.md  pyproject.toml
(+100 files in other folders)
